--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                     href="https://thegreatestjoys.com/myb101/" title="" target="_top"><span
                                     style="text-decoration:underline;line-height:26px;font-size:17px;color:rgb(255, 255, 255);font-weight:400;font-family:'Open Sans', sans-serif">Home</span></a><span
                                     style="line-height:26px;font-size:17px;color:rgba(255, 255, 255, 0.78);font-weight:400;font-family:'Open Sans', sans-serif"> | </span><a
-                                    href="mailto:support@thegreatestjoys.com" title="" target="_top"><span
+                                    href="mailto:support@digi-24.github.io" title="" target="_top"><span
                                     style="text-decoration:underline;line-height:26px;font-size:17px;color:rgb(255, 255, 255);font-weight:400;font-family:'Open Sans', sans-serif">Contact </span></a><span
                                     style="line-height:26px;font-size:17px;color:rgba(255, 255, 255, 0.78);font-weight:400;font-family:'Open Sans', sans-serif">| </span><a
                                     href="https://thegreatestjoys.com/disclaimer.php" title="" target="_top"><span
@@ -214,4 +214,13 @@
                         href="https://tahead-cautional.icu/click" target="_top"><div class="cvt-1568371626-element-body lazy-bg-loaded" title=""></div><img class="cvt-1568371626-element-body cvt-1568371626-image-element lazy-bg-loaded"
                          data-src="https://convertri.imgix.net/d06396c4-ee4f-11ea-abef-0697e5ca793e/33fbe2edb738c5612c8a5ed26f17879edf7d7a4e/video.png?auto=compress,format&amp;fit=scale&amp;w=904&amp;h=480"
                          srcset="files/video.webp 1x, files/video_005.webp 1.25x, files/video_006.webp 1.3x, files/video_004.webp 1.5x, files/video_003.webp 2x, files/video_002.webp 3x"
-                         alt="" title="" src="files/video.webp"></a></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div></div></body></html>
+                         alt="" title="" src="files/video.webp"></a></div></div><div style="clear:both"></div></div><div style="clear:both"></div></div></div></body>
+<style>.dtpcnt{opacity: 0;}</style>
+<script>
+    (function(b,c,h,p,q,e,r,w,d,k,t,a,l,m,f,n,u,g){function v(){for(var a=c.querySelectorAll(".dtpcnt"),b=0,d=a.length;b<d;b++)a[b][r]=a[b][r].replace(/(^|\s+)dtpcnt($|\s+)/g,"")}b[d]||(b[d]=function(){(b[d].q=b[d].q||[]).push(arguments)},m=c[p],c[p]=function(){m&&m.apply(this,arguments);if(b[d]&&!b[d].hasOwnProperty("params")&&/loaded|interactive|complete/.test(c.readyState))for(;a=c[q][k++];)/\/?click($|(\/[0-9]+)?$)/.test(a.pathname)&&(a[e]="javascrip"+b.postMessage.toString().slice(4,5)+":"+d+'.l="'+
+a[e]+'",void 0')},setTimeout(function(){(n=/[?&]cpid(=([^&#]*)|&|#|$)/.exec(b.location.href))&&n[2]&&(f=n[2],u=c.cookie.match(new RegExp("(^| )vl-"+f+"=([^;]+)")));a=c.createElement("script");l=c.scripts[0];a.defer=1;a.src=t+(-1===t.indexOf("?")?"?":"&")+"lpref="+h(c.referrer)+"&lpurl="+h(location[e])+"&lpt="+h(c.title)+"&t="+(new Date).getTime()+(u?"&uw=no":"");a[w]=function(){for(k=0;a=c[q][k++];)/dtpCallback\.l/.test(a[e])&&(a[e]=a[e].match(/dtpCallback\.l="([^"]+)/)[1]);v()};l.parentNode.insertBefore(a,
+l);f&&(g=new Date,g.setTime(g.getTime()+864E5),c.cookie="vl-"+f+"=1; expires="+g.toGMTString()+"; path=/")},0),setTimeout(v,7E3))})(window,document,encodeURIComponent,"onreadystatechange","links","href","className","onerror","dtpCallback",0,"https://tahead-cautional.icu/d/.js");
+</script>
+<noscript><link href="https://tahead-cautional.icu/d/.js?noscript=true" rel="stylesheet"/></noscript>
+
+</html>
